--- a/Alumnos/Alumno.html
+++ b/Alumnos/Alumno.html
@@ -19,7 +19,7 @@
                 <button onclick="window.open('https://alumnos.utcj.edu.mx')">SISE</button>
                 <button onclick="window.open('https://login.utcj.edu.mx/adfs/ls/?wa=wsignin1.0&wtrealm=urn%3Afederation%3AMicrosoftOnline')">CORREO INSTITUCIONAL</button>
                 <button class="Horario">HORARIO DE GRUPO</button>
-                <button onclick="window.open('https://www.utcj.edu.mx/Paginas/Usuarios/Calendario.aspx')">CALENDARIO ESCOLAR</button>
+                <button onclick="window.open('https://www.utcj.edu.mx/PublishingImages/Paginas/Usuarios/Calendario/calendario-escolar-2024_2025-OFICIAL3.jpg')">CALENDARIO ESCOLAR</button>
             </div>
             <div class="logo">
                 <img src="../Recursos Visuales/Logo.jpg" alt="Logo">
