--- a/Docentes/Agendar salon/Agendar salon.html
+++ b/Docentes/Agendar salon/Agendar salon.html
@@ -25,7 +25,7 @@
                             <td><button class="table-button" id="edificio-a">EDIFICIO A <span class="arrow-right">&#9654;</span></button></td>
                         </tr>
                         <tr>
-                            <td><button class="table-button">EDIFICIO H <span class="arrow-right">&#9654;</span></button></td>
+                            <td><button class="table-button" id="edificio-h">EDIFICIO H <span class="arrow-right">&#9654;</span></button></td>
                         </tr>
                         <tr>
                             <td><button class="table-button">EDIFICIO I <span class="arrow-right">&#9654;</span></button></td>
@@ -36,7 +36,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="room-content" id="room-content">
+            <div class="edificio-A" id="edificio-A">
                 <table>
                     <tbody>
                         <tr>
@@ -66,6 +66,38 @@
                     </tbody>
                 </table>
             </div>
+
+            <div class="edificio-H" id="edificio-H">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><button class="table-button">SALÓN H001</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button" >SALÓN H002</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button">SALÓN H003</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button">SALÓN H004</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button">SALÓN H005</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button">SALÓN H006</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button">SALÓN H007</button></td>
+                        </tr>
+                        <tr>
+                            <td><button class="table-button" id="audiovisual-button-h">AUDIOVISUAL</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
             <div class="av-content" id="av-content">
                 <h2>AUDIOVISUAL</h2>
                 <h3>EDIFICIO H</h3>
