Avance de dispositivo movil

--- a/Inicio/Registro/Registro.html
+++ b/Inicio/Registro/Registro.html
@@ -13,10 +13,14 @@
     <div class="outer-container">
         <div class="login-container">
             <form class="login-form" onsubmit="handleLogin(event)">
+                <p>NOMBRE COMPLETO</p>
+                <input type="text" style="text-align: center;" id="nombre">
                 <p>USUARIO</p>
                 <input type="text" style="text-align: center;" id="usuario" placeholder="(al, dc, ad)00000000">
+                <p>CORREO</p>
+                <input type="text" style="text-align: center;" id="correo">
                 <p>CONTRASEÑA</p>
-                <input type="password" id="contrasena">
+                <input type="password" style="text-align: center;" id="contrasena">
                 <button type="submit" class="button">REGISTRAR</button>
             </form>
         </div>
