--- a/Alumnos/Alumno.html
+++ b/Alumnos/Alumno.html
@@ -13,8 +13,9 @@
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
+        <button id="toggleMenu" class="menu-toggle">Menú</button>
         <div class="container">
-            <div class="menu">
+            <div class="menu" id="menu">
                 <button class="Disponibilidad">DISPONIBILIDAD DE SALONES</button>
                 <button onclick="window.open('https://alumnos.utcj.edu.mx')">SISE</button>
                 <button onclick="window.open('https://login.utcj.edu.mx/adfs/ls/?wa=wsignin1.0&wtrealm=urn%3Afederation%3AMicrosoftOnline')">CORREO INSTITUCIONAL</button>
