--- a/Alumnos/Alumno.html
+++ b/Alumnos/Alumno.html
@@ -9,12 +9,12 @@
 <body>
     <div class="wrapper">
         <header>
+            <button id="toggleMenu" class="menu-toggle"><span class="signo"></span></button>
             <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ALUMNOS)</center> </h1>
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
-        <button id="toggleMenu" class="menu-toggle">Menú</button>
-        <div class="container">
+        <div class="container" id="container">
             <div class="menu" id="menu">
                 <button class="Disponibilidad">DISPONIBILIDAD DE SALONES</button>
                 <button onclick="window.open('https://alumnos.utcj.edu.mx')">SISE</button>
