--- a/Index.html
+++ b/Index.html
@@ -20,9 +20,9 @@
                 <button type="submit" class="button">INICIAR SESIÓN</button>
             </form>
         </div>
-        <img src="../../Recursos Visuales/Logo.jpg" alt="Emblema SISU" class="logo">
+        <img src="Recursos Visuales/Logo.jpg" alt="Emblema SISU" class="logo">
     </div>
-    <h6 class="register-text">¿No tienes cuenta? <a href="../Registro/Registro.html">REGISTRATE</a></h6>
+    <h6 class="register-text">¿No tienes cuenta? <a href="Inicio/Registro/Registro.html">REGISTRATE</a></h6>
     <footer class="footer">
         <h3 class="institution-name">Universidad Tecnológica de Ciudad Juárez©</h3>
     </footer>
