--- a/Administrativos/AdministrarHo/Administrarho.html
+++ b/Administrativos/AdministrarHo/Administrarho.html
@@ -9,12 +9,12 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
+            <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
             <a href="../Administrativos.html" class="In">Inicio</a>
             <a href="../../Inicio/Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
-        <div class="container">
+        <div class="container" id="container">
             <table class="tabla-grupo">
                 <tr>
                     <th>GRUPOS</th>
@@ -115,9 +115,7 @@
                     <button class="back" id="back">REGRESAR</button>
                 </div>
             </div>
-            <div class="Logo">
-                <img src="../../Recursos Visuales/Logo.jpg" alt="Logo" id="Logo">
-            </div>
+
             <div class="footer"></div>
         </div>
     </div>
