--- a/Administrativos/Agendacion/Agendacion.html
+++ b/Administrativos/Agendacion/Agendacion.html
@@ -9,7 +9,6 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
             <a href="../Administrativos.html" class="In">Inicio</a>
             <a href="../../Inicio/Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
         </header>
@@ -18,13 +17,12 @@
                 <div class="date-picker">
                     <div class="header">SELECCIONAR FECHA</div>
                     <div class="body">
-                        <label for="date-input">INGRESE FECHA <span class="icon">📅</span> </label>
+                        <label for="fecha">INGRESE FECHA</label>
                         <div>
                             <hr id="linea">
                         </div>
                         <div class="input-container">
-                            <input type="text" id="date-input" placeholder="mes/año" style="background-color: #FFEFD5;">
-                        </div>
+                            <input type="date" id="date-input" placeholder="dia/mes/año" style="background-color: #FFEFD5;">                        </div>
                         <div id="error-message" class="error-message" style="display: none;"></div>
                     </div>
                     <div class="footer">
