--- a/Docentes/Docente.html
+++ b/Docentes/Docente.html
@@ -9,11 +9,12 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCNETES)</center> </h1>
+            <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
+            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCENTES)</center> </h1>
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
-        <div class="container">
+        <div class="container" id="container">
             <div class="menu">
                 <button class="Disponibilidad">DISPONIBILIDAD DE SALONES</button>
                 <button class="Agendar">AGENDAR SALÓN</button>
