--- a/Administrativos/Administrativos.html
+++ b/Administrativos/Administrativos.html
@@ -9,11 +9,12 @@
 <body>
     <div class="wrapper">
         <header>
+            <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
             <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
-        <div class="container">
+        <div class="container" id="container">
             <div class="menu">
                 <button class="SALONES">AGENDACIÓN DE SALONES</button>
                 <button class="HORARIOS">ADMINISTRAR HORARIOS</button>
