--- a/Alumnos/Alumno.html
+++ b/Alumnos/Alumno.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <button id="toggleMenu" class="menu-toggle"><span class="signo"></span></button>
+            <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
             <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ALUMNOS)</center> </h1>
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
