--- a/Administrativos/AdministrarTu/AdministrarTu.html
+++ b/Administrativos/AdministrarTu/AdministrarTu.html
@@ -9,12 +9,13 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
+            <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
+            <h1 class="titulo">SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
             <a href="../Administrativos.html" class="In">Inicio</a>
             <a href="../../Inicio/Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
-        <div class="container">
+        <div class="container" id="container">
             <div class="menu">
                 <button class="tutores">TUTORES ASIGNADOS</button>
                 <button class="asignar"> ASIGNAR TUTOR</button>
