--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
                 <p>USUARIO</p>
                 <input type="text" style="text-align: center;" id="usuario" placeholder="(al, dc, ad)00000000">
                 <p>CONTRASEÑA</p>
-                <input type="password" id="contrasena">
+                <input type="password" style="text-align: center;" id="contrasena">
                 <button type="submit" class="button">INICIAR SESIÓN</button>
             </form>
         </div>
