--- a/Administrativos/AdministrarHo/Administrarho.html
+++ b/Administrativos/AdministrarHo/Administrarho.html
@@ -10,6 +10,7 @@
     <div class="wrapper">
         <header>
             <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
+            <h1 class="titulo">SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ADMINISTRATIVOS)</center> </h1>
             <a href="../Administrativos.html" class="In">Inicio</a>
             <a href="../../Inicio/Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
