--- a/Docentes/Disponibilidad de salones/Disponibilidad de salones.html
+++ b/Docentes/Disponibilidad de salones/Disponibilidad de salones.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCENTES)</center> </h1>
+            <h1 class="titulo">SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCENTES)</center> </h1>
             <a href="../Docente.html" class="In">Inicio</a>
             <a href="../../Inicio/Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
