--- a/Docentes/Docente.html
+++ b/Docentes/Docente.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <header>
             <button id="toggleMenu" class="menu-icon"><span class="signo"></span></button>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCENTES)</center> </h1>
+            <h1 class="titulo">SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(DOCENTES)</center> </h1>
             <a href="../Inicio/Inicio.html" class="logout">Cerrar Sesión</a>
             
         </header>
