--- a/Administrativos/AdministrarTu/Asignar/Asignar.html
+++ b/Administrativos/AdministrarTu/Asignar/Asignar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Integral de Servicios Académicos</title>
     <link rel="stylesheet" href="Asignar.css">
+    <link rel="icon" href="../../../Recursos Visuales/Logo.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
