--- a/Administrativos/Agendacion/Agendacion.html
+++ b/Administrativos/Agendacion/Agendacion.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Integral de Servicios Académicos</title>
     <link rel="stylesheet" href="Agendacion.css">
+    <link rel="icon" href="../../Recursos Visuales/Logo.jpg" type="image/x-icon">
+
 </head>
 <body>
     <div class="wrapper">
@@ -76,8 +78,8 @@
                     </table>
                 </div>
             </div>
-            <div class="logo">
-                <img src="../../Recursos Visuales/Logo.jpg" alt="Logo">
+            <div>
+                <img src="../../Recursos Visuales/Logo.jpg" class="logo" alt="Logo">
             </div>
             <div class="footer"></div>
         </div>
