--- a/Alumnos/Calendario/Calendario.html
+++ b/Alumnos/Calendario/Calendario.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Integral de Servicios Académicos</title>
     <link rel="stylesheet" href="Calendario.css">
+    <link rel="icon" href="../../Recursos Visuales/Logo.jpg" type="image/x-icon">
+
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ALUMNOS)</center> </h1>
+            <h1 class="titulo">SISTEMA INTEGRAL DE SERVICIOS ACADÉMICOS <br> <center>(ALUMNOS)</center> </h1>
             <a href="../Alumno.html" class="In">Inicio</a>
             <a href="../../Index.html" class="logout">Cerrar Sesión</a>
             
