--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Integral de Servicios Académicos</title>
     <link rel="stylesheet" href="Inicio.css">
+    <link rel="icon" href="Recursos Visuales/Logo.jpg" type="image/x-icon">
+
 </head>
 <body>
     <header class="header">
