--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,6 @@
     <title>Sistema Integral de Servicios Académicos</title>
     <link rel="stylesheet" href="Inicio.css">
     <link rel="icon" href="Recursos Visuales/Logo.jpg" type="image/x-icon">
-
 </head>
 <body>
     <header class="header">
@@ -28,6 +27,42 @@
     <footer class="footer">
         <h3 class="institution-name">Universidad Tecnológica de Ciudad Juárez©</h3>
     </footer>
-    <script src="inicio.js"></script>
+    <script>
+        function handleLogin(event) {
+            event.preventDefault(); // Previene la acción por defecto del formulario
+
+            var usuario = document.getElementById('usuario').value;
+            var contrasena = document.getElementById('contrasena').value;
+
+            // Enviar los datos al servidor usando fetch
+            fetch('login.php', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: 'usuario=' + encodeURIComponent(usuario) + '&contrasena=' + encodeURIComponent(contrasena)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    var destino;
+                    if (data.tipoUsuario === 'al') {
+                        destino = 'Alumnos/Alumno.html';
+                    } else if (data.tipoUsuario === 'dc') {
+                        destino = 'Docentes/Docente.html';
+                    } else if (data.tipoUsuario === 'ad') {
+                        destino = 'Administrativos/Administrativos.html';
+                    } else {
+                        alert('Usuario no válido');
+                        return;
+                    }
+                    window.location.href = destino;
+                } else {
+                    alert(data.message);
+                }
+            })
+            .catch(error => console.error('Error:', error));
+        }
+    </script>
 </body>
 </html>
